# get_aoc_input

./: .gitignore  CMakeLists.txt  debug.sh  get_input.sh  main.cpp  version.h
